syntax="proto3";

option go_package = "/msg";

message SyncPid{
  int32 Pid = 1;//服务器新生成玩家ID
}

message BroadCast{
  int32 Pid = 1;
  int32 Tp = 2;
  oneof Data{
    string Content = 3;
    Position P = 4;
    int32 ActionData = 5;
  }
}

message Position{
  float X = 1;
  float Y = 2;
  float Z = 3;
  float V = 4;
}

//世界聊天
message Talk{
  string Content = 1;
}